--- a/css/index.less
+++ b/css/index.less
@@ -184,6 +184,16 @@ h3.bitTitle{font-size:.32rem;padding:.2rem 0 .1rem;text-align: center;}
 		left:.1rem;
 	}
 }
+/*page6*/
+.page6{
+	.bitTitle{font-size:.2rem;}
+	.page6-content{position: absolute;top:.3rem;padding:.69rem;
+		.aboutMy{position: relative;}
+		h4{margin-top:.2rem}
+		img{margin-top:.1rem}
+	}
+}
+
 
 
 /*动画前设置的样式*/
@@ -316,6 +326,7 @@ h3.bitTitle,.zuopin-more{
 /*page6*/
 .swiper-slide-active.page6{
 	.comp_image{animation: 1s ease 1s 1 normal both running zoomIn;}
+	.aboutMy{animation: 1s ease-in 1.5s 1 normal both running fadeInLeft}
 }
 
 
